--- a/html/ja.html
+++ b/html/ja.html
@@ -23,7 +23,7 @@
             <!-- Logo -->
             <div class = "log">
                 <ul>
-                    <li><a class="logo">FuckLighting Laboratory</a></li>
+                    <li><a class="logo">Intelligent Lighting Laboratory</a></li>
                 </ul>
             </div>
         </div> 
