--- a/html/non-visual.html
+++ b/html/non-visual.html
@@ -36,7 +36,7 @@
         <div class = "MEDI_MDER">
             <h1>Melanopic Equivalent Daylight Illuminance (MEDI)</h1>
             <p>(Suggested range: 0lux - 200lux)</p>
-            <p> & </p>
+            <h1> & </h1>
             <h1>Melanopic Daylight Efficacy Ratio (MDER)</h1>
             <p>(Suggested range: 0 - 1)</p>
             <input type="text" name="get_medi", id="get_medi", class="input-field-medi", placeholder="Set Desired MEDI", min="50", max="250"> 
@@ -60,7 +60,7 @@
 
         <div class ="target-content">
             <h1>Target Metrics</h1>
-            <p id="inputDisplay"> </p>
+            <div id="inputDisplay"> </div>
         </div>
         <div class = "close-loop">
             <h1> Close-Loop P Control:</h1>  
@@ -123,8 +123,8 @@
 
             var data = [SPM_return];
             var layout = {
-                height: 400,
-                width: 500,
+                height: 450,
+                width: 550,
                 margin: {
                 t: 50,  // Top margin
                 b: 60,  // Bottom margin
@@ -169,6 +169,7 @@
             dataResult2.innerHTML = `
                 <p> LER: ${results['Measured LER']} lm/W</p>
                 <p> Lumen: ${results['Measured Lumen']} lm</p>
+                <p> Watt: ${results['Measured Watt']} W <p>
             `;
 
             createPlot(results['SPM_interpolated']);
@@ -177,8 +178,10 @@
 
             function medi_mderInputDisplay(medi, mder) {
                 const inputDisplay = document.getElementById('inputDisplay');
-                inputDisplay.innerHTML = `Target MEDI: <span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;"> ${medi} lux </span>,
-                Target MDER: <span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;"> ${mder} </span>`;
+                inputDisplay.innerHTML = `
+                <p>Target MEDI: <span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;"> ${medi} lux  </span></p>
+                <p>Target MDER: <span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;"> ${mder} </span></p>
+                `;
             }
 
             clearButton.addEventListener('click', async () => {
