--- a/html/non-visual.html
+++ b/html/non-visual.html
@@ -118,7 +118,9 @@
                 630, 635, 640, 645, 650, 655, 660, 665, 670, 675, 680, 685, 690, 695, 700, 705, 710, 
                 715, 720, 725, 730, 735, 740, 745, 750, 755, 760, 765, 770, 775, 780],
                 y: yValues,
-                type: 'scatter'
+                type: 'scatter',
+                fill: 'tozeroy',
+                fillcolor: 'blue',
             };
 
             var data = [SPM_return];
