--- a/html/pair.html
+++ b/html/pair.html
@@ -137,7 +137,9 @@
                 630, 635, 640, 645, 650, 655, 660, 665, 670, 675, 680, 685, 690, 695, 700, 705, 710, 
                 715, 720, 725, 730, 735, 740, 745, 750, 755, 760, 765, 770, 775, 780],
                 y: yValues,
-                type: 'scatter'
+                type: 'scatter',
+                fill: 'tozeroy',
+                fillcolor: 'blue',
             };
 
             var data = [SPM_return];
@@ -229,7 +231,7 @@
                 inputPlux_cp.value = '';
                 inputCCT_cm.value = '';
                 inputMedi_cm.value = '';
-                inputPlux_cp.value = '';
+                inputPlux_pm.value = '';
                 inputMedi_pm.value = '';
             });
 
@@ -340,6 +342,7 @@
                     covering.style.display = 'none';
 
                 } else if(inputPlux_pm.value !== "" && inputMedi_pm.value !== ""){
+                    covering.style.display = 'flex';
                     glasshourGif.style.display = 'block';
                     const requestData = {
                         inputplux: inputPlux_pm.value,
