--- a/html/visual.html
+++ b/html/visual.html
@@ -131,13 +131,15 @@
                 630, 635, 640, 645, 650, 655, 660, 665, 670, 675, 680, 685, 690, 695, 700, 705, 710, 
                 715, 720, 725, 730, 735, 740, 745, 750, 755, 760, 765, 770, 775, 780],
                 y: yValues,
-                type: 'scatter'
+                type: 'scatter',
+                fill: 'tozeroy',
+                fillcolor: 'blue',
             };
 
             var data = [SPM_return];
             var layout = {
-                height: 400,
-                width: 500,
+                height: 450,
+                width: 550,
                 margin: {
                 t: 50,  // Top margin
                 b: 60,  // Bottom margin
@@ -182,6 +184,7 @@
             dataResult2.innerHTML = `
                 <p> LER: ${results['Measured LER']} lm/W</p>
                 <p> Lumen: ${results['Measured Lumen']} lm</p>
+                <p> Watt: ${results['Measured Watt']} W <p>
             `;
 
             createPlot(results['SPM_interpolated']);
@@ -296,7 +299,7 @@
                     const result = await response.json();
                     updateResults(result.processedData, 'plux');
                     covering.style.display = 'none';
-                    
+
                 } else if(inputCRI.value !== ""){
                     covering.style.display = 'flex';
                     glasshourGif.style.display = 'block';
