--- a/html/selfcali.html
+++ b/html/selfcali.html
@@ -32,7 +32,7 @@
         <div class ="note">
             <h1> Important Note* </h1>
             <p> 1. Ensure the sensor is correctly positioned at the designated location. </p>
-            <p> 2. The calibration process may exceed the estimated time collection; kindly do not interupt the process</p>
+            <p> 2. The calibration process may exceed the estimated time collection; kindly do not interupt the process.</p>
             <p> 3. Ensure nobody enters the room during the calibration process.</p>
             <p> 4. Tuning of light is prohibited once the calibration process is started. </p>
             <p> 5. The measured data will be saved in an excel file. </p>
@@ -67,7 +67,7 @@
         </div>
 
         <div class ="resultcali">
-            <h1> Done Collecting for </h1>
+            <h1 id="dateTime"></h1>
             <div id="result-cali" class="result-cali"></div>
         </div>
         <div class ="home">
@@ -95,6 +95,19 @@
                 <p> CCT: ${results['cct']} </p>
             `;
             }
+
+            function updateDateTime() {
+                const dateTimeElement = document.getElementById('dateTime');
+                const now = new Date();
+                const formattedDateTime = now.toLocaleString(); // Format the date and time
+                
+                dateTimeElement.textContent = formattedDateTime;
+            }
+            // Update the date and time initially
+            updateDateTime();
+            // Update the date and time every second
+            setInterval(updateDateTime, 1000);
+
             caliButton.addEventListener('click', async () =>{
                 const requestData = {
                     inputbri_min: bri_min.value,
