--- a/html/music.html
+++ b/html/music.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
 </head>
 <body>
     <!-- Header -->
@@ -19,28 +18,18 @@
             <div class="bulb-icon">
                 <i class='bx bx-bulb' id="bulb-icon"></i>
             </div>
-            
             <!-- Logo -->
             <div class = "log">
                 <ul>
-                    <li><a class="logo">Intelligent Lighting Laboratory</a></li>
+                    <li><a class="logo" id="logo">Intelligent Lighting Laboratory</a></li>
                 </ul>
             </div>
         </div> 
     </header>
+
+    <!-- Banner -->
     <section id="ovrflw" class="backgrd">
-        <div class="text-box">
-            <h1>Illuminating Life Intelligently</h1>
-         <p>We aim to fulfill all the choices and preferences of our customers.</p>
-            <a href="/visual" class = "visual-btn"> Visual Metrics</a> 
-            <a href="/nonvisual" class = "non-visual-btn"> Non-Visual Metrics </a>
-            <a href="/pair" class = "pair-btn"> Pair Metrics </a>
-            <a href="/step" class = "step-btn"> Step Metrics </a>
-            <a href="/audio" class = "step-btn"> Music Light </a>
-        </div>
-        <div class ="home">
-            <a href='/' class="home-btn"> Home</a> 
-        </div>
-    </section>
+        
+    </section> 
 </body>
 </html>
