--- a/html/main.html
+++ b/html/main.html
@@ -33,7 +33,7 @@
             <h1>Illuminating Life Intelligently</h1>
             <p>We aim to fulfill all the choices and preferences of our customers.</p>
             <a href="/metrics" class = "hero-btn" id="metrics-btn"> Integrative Lighting Control</a> 
-            <a href="/selfcali" class = "hero-btn2" id="metrics-btn"> Data Collection </a>
+            <a href="/collect" class = "hero-btn2" id="metrics-btn"> Data Collection </a>
             <a href= "/ja" class = "hero-btn"> Integrative Lighting Simulation </a>
         </div>
     </section> 
