--- a/html/music.html
+++ b/html/music.html
@@ -29,7 +29,9 @@
 
     <!-- Banner -->
     <section id="ovrflw" class="backgrd">
-        
+        <div class ="back">
+            <a href="/metrics" class="home-btn"> Back </a> 
+        </div>
     </section> 
 </body>
 </html>
