--- a/html/pair.html
+++ b/html/pair.html
@@ -30,7 +30,7 @@
     </header>
     <section id="ovrflw" class="backgrd">
         <div class = "comb">
-            <h1>Pair Metrics:</h1>
+            <h1>Pairwise Metrics:</h1>
         </div>
     
         <div class = "CCT_Plux">
