--- a/html/metrics.html
+++ b/html/metrics.html
@@ -34,7 +34,7 @@
          <p>We aim to fulfill all the choices and preferences of our customers.</p>
             <a href="/visual" class = "visual-btn"> Visual Metrics</a> 
             <a href="/nonvisual" class = "non-visual-btn"> Non-Visual Metrics </a>
-            <a href="/pair" class = "pair-btn"> Pair Metrics </a>
+            <a href="/pair" class = "pair-btn"> Pairwise Metrics </a>
             <a href="/step" class = "step-btn"> Step Metrics </a>
             <a href="/audio" class = "step-btn"> Music Light </a>
         </div>
