--- a/html/music.html
+++ b/html/music.html
@@ -29,6 +29,10 @@
 
     <!-- Banner -->
     <section id="ovrflw" class="backgrd">
+        <form action="/upload" method="post" enctype="multipart/form-data">
+            <input type="file" name="mp3file" accept=".mp3">
+            <input type="submit" value="Upload">
+        </form>
         <div class ="back">
             <a href="/metrics" class="home-btn"> Back </a> 
         </div>
