--- a/html/ja.html
+++ b/html/ja.html
@@ -46,13 +46,13 @@
             <h1>Daylight Prediction</h1>
             <label for="curtainInput" class="ja_input_select_text">Curtain opened percentage: </label>
             <select id="curtainInput" name="curtainInput" class="ja_input_select">
-                <option value="0">0%</option>
-                <option value="10">10%</option>
-                <option value="25">25%</option>
-                <option value="50">50%</option>
-                <option value="75">75%</option>
-                <option value="90">90%</option>
-                <option value="100">100%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="0">0%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="10">10%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="25">25%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="50">50%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="75">75%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="90">90%</option>
+                <option style="background: rgba(11, 73, 241, 0.615);" value="100">100%</option>
             </select><br>
 
             <button id="openPopup" class="ja_input_button">Select target zone</button>
@@ -129,9 +129,9 @@
             
             <label for="metricsInput" class="ja_input_select_text">Desired pair metrics: </label>
             <select id="metricsInput" name="metricsInput" class="ja_input_select">
-                <option value="-1">None</option>
-                <option value="0">CCT & Photopic Lux</option>
-                <option value="1">CCT & MEDI</option>
+                <option style="background: var(--main-color);" value="-1">None</option>
+                <option style="background: var(--main-color);" value="0">CCT & Photopic Lux</option>
+                <option style="background: var(--main-color);" value="1">CCT & MEDI</option>
             </select><br>
             <div id="ja_selected_pair1" style="display: none;">
                 <label for="ja_get_cct" class="ja_input_select_text">Desired CCT: </label>
