--- a/html/pair.html
+++ b/html/pair.html
@@ -109,7 +109,7 @@
             const clearButton = document.getElementById('clearbutton');
             const closeloopctrl = document.getElementById('toggle');
 
-            // Input Constant of Visual metrics
+            // Input Constant of Pair metrics
             const inputCCT_cp = document.getElementById('get_cct_plux');
             const inputPlux_cp = document.getElementById('get_plux_cct');
             const inputCCT_cm = document.getElementById('get_cct_medi');
