--- a/html/ja.html
+++ b/html/ja.html
@@ -480,7 +480,7 @@
                     type: 'scatter',
                     name: legend2,
                     line: {
-                        color: 'orange'
+                        color: 'red'
                     }
                 };
             
