--- a/html/step.html
+++ b/html/step.html
@@ -178,7 +178,7 @@
             <button id="set-step-button-medi-mder" class="set-step-button">Set</button> 
         </div>
 
-        <div class = "result-content-step" >
+        <div id= "result-content-step"  class="result-content-step" >
             <div id="result-box" class="result-box-step"></div>
         </div>
 
@@ -241,6 +241,7 @@
             const Plot2 = document.getElementById('pair2Div');
 
             // Result Boxes Constant
+            const resultBox = document.getElementById('result-content-step')
             const dataResult = document.getElementById('result-box');
 
             // Result CCT and Plux
@@ -341,10 +342,10 @@
 
             function updateResults_CP(results){
                 dataResult.innerHTML = `
-                <p> Target CCT: ${results['CCT_Target']} </p>
-                <p> Target Plux: ${results['Plux_Target']} </p>
-                <p> Measured CCT: ${results['CCT_Measured']}</p> 
-                <p> Measured Plux: ${results['Plux_Measured']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target CCT: </span> ${results['CCT_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Plux: </span> ${results['Plux_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured CCT: </span>${results['CCT_Measured']}</p> 
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Plux: </span>${results['Plux_Measured']} </p>
                 `
                 createPlot1(results['Time'], results['CCT_Target'], results['CCT_Measured'])
                 createPlot2(results['Time'], results['Plux_Target'], results['Plux_Measured'])
@@ -452,10 +453,10 @@
 
             function updateResults_CM(results){
                 dataResult.innerHTML = `
-                <p> Target CCT: ${results['CCT_Target']} </p>
-                <p> Target Plux: ${results['Medi_Target']} </p>
-                <p> Measured CCT: ${results['CCT_Measured']} </p> 
-                <p> Measured Plux: ${results['Medi_Measured']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target CCT: </span>${results['CCT_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Medi: </span>${results['Medi_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured CCT: </span>${results['CCT_Measured']} </p> 
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Medi: </span>${results['Medi_Measured']} </p>
                 `
                 createPlot3(results['Time'], results['CCT_Target'], results['CCT_Measured'])
                 createPlot4(results['Time'], results['Medi_Target'], results['Medi_Measured'])
@@ -563,10 +564,10 @@
 
             function updateResults_PM(results){
                 dataResult.innerHTML = `
-                <p> Target Plux: ${results['Plux_Target']} </p>
-                <p> Target Medi: ${results['Medi_Target']} </p>
-                <p> Measured Plux: ${results['Plux_Measured']}</p> 
-                <p> Measured Medi: ${results['Medi_Measured']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Plux: </span>${results['Plux_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Medi: </span>${results['Medi_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Plux: </span>${results['Plux_Measured']}</p> 
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Medi: </span>${results['Medi_Measured']} </p>
                 `
                 createPlot5(results['Time'], results['Plux_Target'], results['Plux_Measured'])
                 createPlot6(results['Time'], results['Medi_Target'], results['Medi_Measured'])
@@ -674,10 +675,10 @@
 
             function updateResults_MM(results){
                 dataResult.innerHTML = `
-                <p> Target Medi: ${results['Medi_Target']} </p>
-                <p> Target Mder: ${results['Mder_Target']} </p>
-                <p> Measured Medi: ${results['Medi_Measured']}</p> 
-                <p> Measured Mder: ${results['Mder_Measured']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Medi: </span>${results['Medi_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Target Mder: </span>${results['Mder_Target']} </p>
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Medi: </span>${results['Medi_Measured']}</p> 
+                <p><span style="color: rgba(11, 73, 241, 0.615); font-weight: bold;">Measured Mder: </span>${results['Mder_Measured']} </p>
                 `
                 createPlot7(results['Time'], results['Medi_Target'], results['Medi_Measured'])
                 createPlot8(results['Time'], results['Mder_Target'], results['Mder_Measured'])
@@ -1119,7 +1120,7 @@
                 }); 
                 const result = await response.json();
                 updateResults_CP(result.processedData);
-                dataResult.style.display = "block";
+                resultBox.style.display = "block";
                 Plot1.style.display = "block";
                 Plot2.style.display = "block";
             })
@@ -1263,7 +1264,7 @@
                 }); 
                 const result = await response.json();
                 updateResults_CM(result.processedData); 
-                dataResult.style.display = "block";
+                resultBox.style.display = "block";
                 Plot1.style.display = "block";
                 Plot2.style.display = "block";    
             })
@@ -1389,7 +1390,7 @@
                 }); 
                 const result = await response.json();  
                 updateResults_PM(result.processedData); 
-                dataResult.style.display = "block";
+                resultBox.style.display = "block";
                 Plot1.style.display = "block";
                 Plot2.style.display = "block";   
 
@@ -1514,7 +1515,7 @@
                 }); 
                 const result = await response.json(); 
                 updateResults_MM(result.processedData); 
-                dataResult.style.display = "block";
+                resultBox.style.display = "block";
                 Plot1.style.display = "block";
                 Plot2.style.display = "block";  
             })
