--- a/html/ja.html
+++ b/html/ja.html
@@ -115,10 +115,10 @@
         </div>
 
         <div class="ja_plot_box2">
-            <h1>Required LED Spectrum</h1>
+            <h1>Target LED Spectrum</h1>
             <div class="ja_plot" id="led_spec"></div>
             <br><br><br><br><br><br><br><br><br><br><br>
-            <h1>Resultant Spectrum</h1>
+            <h1>Resultant Spectrum with LEDs</h1>
             <div class="ja_plot_result" id="result_spec"></div>
             
         </div>
@@ -154,27 +154,6 @@
         <div class ="back">
             <a href="/" class="back-btn"> Home </a> 
         </div>
-        
-        <!-- <div class ="target-content">
-            <h1>Target Metrics</h1>
-            <p id="inputDisplay"> </p>
-        </div>
-
-        <div class = "result-content" >
-            <h1>Measured Metrics Results:</h1>
-            <div id="result-box" class="result-box"></div>
-        </div> -->
-        <!-- <div class = "energy-content" >
-            <h1> Estimated Energy Usage </h1>
-            <div id="result-box2" class="result-box2"> </div>
-        </div> -->
-        <!-- <div class = "occupancy" >
-            <h1> Occupancy Status </h1>
-            <div class = "result-box3">
-                <div class="Presence"> Presence: </div>
-                <div class="Detected"> Person Detected: </div>
-            </div>
-        </div> -->
 
         <script>
             const setButton = document.getElementById("ja_input_set");
