--- a/html/ja.html
+++ b/html/ja.html
@@ -35,7 +35,7 @@
     </header>
     <section id="ovrflw" class="backgrd">
         <div class = "vm">
-            <h1> -> Integrative Light Simulator with Indoor Daylight Prediction <- </h1>
+            <h1> -> Smart Light Simulator (SLS) with Indoor Daylight Prediction <- </h1>
         </div>
 
         <div class = "ja_time">
